# personal-brand-agent

./: .env.example  .gitignore  ARCHITECTURE_FIXES.md  README.md  architecture.md  import_profile.py  prompts  pyproject.toml  run.py
.claude/: settings.json  settings.local.json
.claude/agents/: playwright-validator.md  scout-report-suggest.md
.claude/commands/: prime.md  question-w-mermaid-diagrams.md
.claude/data/sessions/: 08a25ad6-1bd1-4440-a125-39e076a70a6d.json  0aba61f3-90ac-45ac-b25c-0c627655e63c.json  9cb3a73b-98c3-41c8-8feb-0c96199b1f19.json  d94f1a54-76e3-44a3-8fd8-5c9cc7be7364.json  e91e7101-6af9-4456-8360-26d37f385645.json
.claude/hooks/: notification.py
.claude/skills/laozhang-api/: SKILL.md
.claude/skills/prod-database/: SKILL.md
.claude/skills/windows-encoding/: SKILL.md
config/: hook_templates.json  meta_agent_config.yaml  schedule.json  scoring_weights.json  settings.yaml  visual_styles.json  writer_config.json
migrations/: 001_initial_schema.sql  002_missing_tables.sql  002a_add_imported_content_type.sql  003_author_profile_visual_prefs.sql  004_rich_content_metadata.sql  005_reshare_metadata.sql  006_drop_unused_columns.sql  007_micro_learnings.sql
prompts/: evaluator_criteria.txt  evaluator_system.txt  humanizer_rules.txt  writer_system.txt
specs/: linkedin-super-agent-implementation.md
src/: config.py  database.py  exceptions.py  models.py  utils.py
src/agents/: __init__.py  analyzer.py  humanizer.py  orchestrator.py  photo_selector.py  qc_agent.py  trend_scout.py  visual_creator.py  writer.py
src/author/: __init__.py  author_profile_agent.py  models.py  profile_importer.py
src/knowledge/: anti_patterns.json  style_guide.md  top_posts.json
src/logging/: __init__.py  agent_logger.py  component_logger.py  daily_digest.py  models.py  pipeline_run_logger.py
src/meta_agent/: __init__.py  claude_code_client.py  code_evolution.py  deep_improvement_loop.py  evaluator.py  experimentation.py  knowledge_base.py  learning_engine.py  meta_agent.py  models.py  modification_safety.py  reflection_engine.py  research_agent.py  single_call_evaluator.py
src/scheduling/: __init__.py  metrics_scheduler.py  models.py  publishing_scheduler.py  scheduling_system.py
src/tools/: __init__.py  arxiv.py  claude_client.py  linkedin_client.py  nano_banana.py  perplexity.py  photo_library.py  twitter.py
src/ui/: __init__.py  telegram_bot.py
tests/: conftest.py  test_agents.py  test_config.py  test_database.py  test_exceptions.py  test_logging_system.py  test_meta_agent.py  test_models.py  test_profile_importer.py  test_scheduling.py  test_tools.py  test_utils.py
(+21 files in other folders)
