[project]
name = "linkedin-super-agent"
version = "0.1.0"
description = "Multi-agent system for LinkedIn content automation with self-improvement capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # LangGraph / LangChain orchestration
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",

    # Anthropic SDK (direct usage for Claude Opus 4.5)
    "anthropic>=0.40.0",

    # Database - Supabase is the ONLY database
    "supabase>=2.0.0",

    # HTTP / async networking
    "aiohttp>=3.10.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",

    # LinkedIn integration
    "linkedin-api>=2.0.0",
    "pyotp>=2.9.0",

    # Research sources
    "arxiv>=2.1.0",

    # Telegram bot for human-in-the-loop approval
    "python-telegram-bot>=21.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Structured logging
    "structlog>=24.1.0",

    # Data validation and structured outputs
    "pydantic>=2.7.0",

    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",

    # Image processing
    "Pillow>=10.0.0",

    # Timezone handling
    "pytz>=2024.1",

    # Package name validation (used by self-modifying code engine)
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
linkedin-agent = "src.agents.orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
